syntax = "proto3";

package models;

import "google/protobuf/timestamp.proto";
option go_package = "github.com/foxcool/greedy-eye/internal/api/models";

// Asset represents financial instrument (crypto, stock, etc.).
message Asset {
    string id = 1;
    string symbol = 2;
    string name = 3;
    AssetType type = 4;
    repeated string tags = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

enum AssetType {
  ASSET_TYPE_UNSPECIFIED = 0;
  ASSET_TYPE_CRYPTOCURRENCY = 1;
  ASSET_TYPE_STOCK = 2;
  ASSET_TYPE_BOND = 3;
  ASSET_TYPE_COMMODITY = 4;
  ASSET_TYPE_FOREX = 5;
  ASSET_TYPE_FUND = 6;
}
